[gd_scene load_steps=12 format=3 uid="uid://c78ph1l0oxvwj"]

[ext_resource type="Script" path="res://scenes/modules/module1/quan_ly_ho_khau.gd" id="1_mjs80"]
[ext_resource type="Theme" uid="uid://buw518p00ufvd" path="res://assets/resources/themes/theme_menubutton.tres" id="2_417s5"]
[ext_resource type="Theme" uid="uid://bmblqurfupkr5" path="res://assets/resources/themes/theme_tab.tres" id="2_s4j0q"]
[ext_resource type="PackedScene" uid="uid://erqq5a4r4e8u" path="res://scenes/modules/module1/sprints/them_nhan_khau.tscn" id="3_kvb06"]
[ext_resource type="PackedScene" uid="uid://xuqduhuov5eq" path="res://scenes/modules/module1/sprints/them_ho_khau.tscn" id="4_px48e"]
[ext_resource type="PackedScene" uid="uid://clabb4kp035pw" path="res://scenes/modules/module1/sprints/tach_ho.tscn" id="5_onib2"]
[ext_resource type="PackedScene" uid="uid://cheveqt1l8423" path="res://scenes/modules/module1/sprints/tam_vang.tscn" id="7_8swhq"]
[ext_resource type="PackedScene" uid="uid://ctqhyuw28nshc" path="res://scenes/modules/module1/sprints/thong_ke.tscn" id="7_aa1rl"]
[ext_resource type="PackedScene" uid="uid://by66yd4p13lqe" path="res://scenes/modules/module1/sprints/tam_tru.tscn" id="7_fc5yh"]
[ext_resource type="PackedScene" uid="uid://c12xpxarifm3" path="res://scenes/modules/module1/sprints/lich_su.tscn" id="9_lmqfh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_up3vj"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 4

[node name="QuanLyHoKhau2" type="PanelContainer"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_up3vj")
script = ExtResource("1_mjs80")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ThanhCongCu" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ThemNhanKhau" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
button_pressed = true
text = "Thêm Nhân Khẩu"

[node name="ThemHoKhau" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Thêm Hộ Khẩu"

[node name="TachHo" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Tách Hộ Khẩu"

[node name="TamTru" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Tạm Trú"

[node name="TamVang" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Tạm Vắng"

[node name="LichSu" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Lịch Sử"

[node name="ThongKe" type="Button" parent="VBoxContainer/ThanhCongCu"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("2_417s5")
toggle_mode = true
text = "Thống Kê"

[node name="ChucNang" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_s4j0q")
tabs_visible = false

[node name="ThemNhanKhau" parent="VBoxContainer/ChucNang" instance=ExtResource("3_kvb06")]
layout_mode = 2

[node name="ThemHoKhau" parent="VBoxContainer/ChucNang" instance=ExtResource("4_px48e")]
visible = false
layout_mode = 2

[node name="TachHo" parent="VBoxContainer/ChucNang" instance=ExtResource("5_onib2")]
visible = false
layout_mode = 2

[node name="TamTru" parent="VBoxContainer/ChucNang" instance=ExtResource("7_fc5yh")]
visible = false
layout_mode = 2

[node name="TamVang" parent="VBoxContainer/ChucNang" instance=ExtResource("7_8swhq")]
visible = false
layout_mode = 2

[node name="LichSu" parent="VBoxContainer/ChucNang" instance=ExtResource("9_lmqfh")]
visible = false
layout_mode = 2

[node name="ThongKe" parent="VBoxContainer/ChucNang" instance=ExtResource("7_aa1rl")]
visible = false
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/ThanhCongCu/ThemNhanKhau" to="." method="_on_them_nhan_khau_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/ThemHoKhau" to="." method="_on_them_ho_khau_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/TachHo" to="." method="_on_tach_ho_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/TamTru" to="." method="_on_tam_tru_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/TamVang" to="." method="_on_tam_vang_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/LichSu" to="." method="_on_lich_su_pressed"]
[connection signal="pressed" from="VBoxContainer/ThanhCongCu/ThongKe" to="." method="_on_thong_ke_pressed"]
[connection signal="tab_selected" from="VBoxContainer/ChucNang" to="." method="_on_chuc_nang_tab_selected"]
